--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,5 @@
 <h1 class="title">This is the Home page</h1>
+<span>I as trying to make dynamic changes on the pages, not focus on the content...</span>
 
 <div class="home-container">
   {{#each db}}
